--- a/eas.json
+++ b/eas.json
@@ -20,7 +20,11 @@
       "preview3": {
         "developmentClient": true
       },
-      "production": {}
+      "production": {
+        "android":{
+          "buildType":"apk"
+        }
+      }
     },
     "submit": {
       "production": {}
