--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "eas build -p android --profile preview"
+    "build": "eas build -p android --profile production"
   },
   "dependencies": {
     "expo": "~48.0.15",
