--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "eas build -p android --profile production"
+    "build": "eas build -p android --profile production",
+    "production": "eas build -p android"
   },
   "dependencies": {
     "expo": "~48.0.15",
